--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -13,3 +13,4 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: wagoid/commitlint-github-action@v6
+        if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]'
