--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -11,6 +11,7 @@ jobs:
   commitlint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v5      
+        run: echo "github.actor is ${{ github.actor }}" # 이 줄을 추가!
       - uses: wagoid/commitlint-github-action@v6
         if: github.actor != 'dependabot[bot]' && github.actor != 'dependabot-preview[bot]'
